--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5453,10 +5453,10 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
   <data name="WRN_ParameterConditionallyDisallowsNull_Title" xml:space="preserve">
     <value>Parameter may not have a null value when exiting in some condition.</value>
   </data>
-  <data name="WRN_MethodShouldThrow" xml:space="preserve">
+  <data name="WRN_ShouldNotReturn" xml:space="preserve">
     <value>A method marked with [DoesNotReturn] should throw on all code paths.</value>
   </data>
-  <data name="WRN_MethodShouldThrow_Title" xml:space="preserve">
+  <data name="WRN_ShouldNotReturn_Title" xml:space="preserve">
     <value>A method marked with [DoesNotReturn] should throw on all code paths.</value>
   </data>
   <data name="WRN_NullabilityMismatchInReturnTypeOfTargetDelegate" xml:space="preserve">
